--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,14 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Solway:wght@300;400;500;700;800&family=Sue+Ellen+Francisco&family=Suez+One&family=Supermercado+One&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Supermercado One', cursive !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ffffff;
 }
 
-code {
+.code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
